--- a/index.html
+++ b/index.html
@@ -585,5 +585,87 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="script.js"></script>
+
+<!-- Canvas para los corazones cayendo -->
+<canvas id="heartsCanvas" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 9999;"></canvas>
+
+<script>
+// ============ EFECTO DE CORAZONES CAYENDO (Mes del Amor) ============
+const canvas = document.getElementById('heartsCanvas');
+const ctx = canvas.getContext('2d');
+
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+
+window.addEventListener('resize', () => {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+});
+
+const hearts = [];
+const heartCount = 30; // Puedes aumentar o bajar (30-50 queda bien)
+
+class Heart {
+    constructor() {
+        this.x = Math.random() * canvas.width;
+        this.y = Math.random() * -100;
+        this.size = Math.random() * 15 + 10;
+        this.speedY = Math.random() * 1.5 + 0.5; // Caen lento
+        this.speedX = Math.random() * 1 - 0.5; // Desvío horizontal suave
+        this.rotation = Math.random() * Math.PI * 2;
+        this.rotationSpeed = Math.random() * 0.05 - 0.025;
+        this.opacity = Math.random() * 0.5 + 0.5;
+    }
+
+    draw() {
+        ctx.save();
+        ctx.translate(this.x, this.y);
+        ctx.rotate(this.rotation);
+        ctx.globalAlpha = this.opacity;
+        ctx.fillStyle = '#ff1493'; // Rosa fuerte (puedes cambiar a #ff69b4, #e91e63, etc.)
+
+        // Forma de corazón
+        ctx.beginPath();
+        ctx.moveTo(0, this.size / 4);
+        ctx.bezierCurveTo(-this.size / 2, -this.size / 2, -this.size, -this.size / 4, -this.size / 4, this.size / 2);
+        ctx.bezierCurveTo(-this.size / 8, this.size, 0, this.size / 1.5, 0, this.size / 1.5);
+        ctx.bezierCurveTo(0, this.size / 1.5, this.size / 8, this.size, this.size / 4, this.size / 2);
+        ctx.bezierCurveTo(this.size, -this.size / 4, this.size / 2, -this.size / 2, 0, this.size / 4);
+        ctx.closePath();
+        ctx.fill();
+
+        ctx.restore();
+    }
+
+    update() {
+        this.y += this.speedY;
+        this.x += this.speedX;
+        this.rotation += this.rotationSpeed;
+
+        if (this.y > canvas.height + this.size) {
+            this.y = -this.size;
+            this.x = Math.random() * canvas.width;
+        }
+    }
+}
+
+// Crear corazones
+for (let i = 0; i < heartCount; i++) {
+    hearts.push(new Heart());
+}
+
+function animate() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    hearts.forEach(heart => {
+        heart.update();
+        heart.draw();
+    });
+    requestAnimationFrame(animate);
+}
+
+animate();
+// ============ FIN DEL EFECTO ============
+</script>  
+
 </body>
 </html>
