--- a/index.html
+++ b/index.html
@@ -586,11 +586,11 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="script.js"></script>
 
-<!-- Canvas para los corazones cayendo -->
+<!-- Canvas para los corazones cayendo (Mes del Amor - Versión mejorada) -->
 <canvas id="heartsCanvas" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 9999;"></canvas>
 
 <script>
-// ============ EFECTO DE CORAZONES CAYENDO (Mes del Amor) ============
+// ============ EFECTO DE CORAZONES CAYENDO (Mejorado: forma perfecta de corazón + colores rojos/rosas) ============
 const canvas = document.getElementById('heartsCanvas');
 const ctx = canvas.getContext('2d');
 
@@ -603,34 +603,37 @@ window.addEventListener('resize', () => {
 });
 
 const hearts = [];
-const heartCount = 30; // Puedes aumentar o bajar (30-50 queda bien)
+const heartCount = 35; // Un poquito más para que se vea lleno
+const colors = ['#ff0000', '#e74c3c', '#ff1493', '#e91e63', '#c2185b', '#ff69b4', '#ff4040']; // Rojos y rosas fuertes
 
 class Heart {
     constructor() {
         this.x = Math.random() * canvas.width;
         this.y = Math.random() * -100;
-        this.size = Math.random() * 15 + 10;
-        this.speedY = Math.random() * 1.5 + 0.5; // Caen lento
-        this.speedX = Math.random() * 1 - 0.5; // Desvío horizontal suave
+        this.size = Math.random() * 20 + 15; // Más grandes
+        this.speedY = Math.random() * 1.2 + 0.6; // Caen lento
+        this.speedX = Math.random() * 1 - 0.5; // Flotan suavemente
         this.rotation = Math.random() * Math.PI * 2;
-        this.rotationSpeed = Math.random() * 0.05 - 0.025;
-        this.opacity = Math.random() * 0.5 + 0.5;
+        this.rotationSpeed = Math.random() * 0.03 - 0.015; // Giro suave
+        this.opacity = Math.random() * 0.4 + 0.6; // Más visibles
+        this.color = colors[Math.floor(Math.random() * colors.length)];
     }
 
     draw() {
         ctx.save();
+        ctx.globalAlpha = this.opacity;
+        ctx.fillStyle = this.color;
         ctx.translate(this.x, this.y);
         ctx.rotate(this.rotation);
-        ctx.globalAlpha = this.opacity;
-        ctx.fillStyle = '#ff1493'; // Rosa fuerte (puedes cambiar a #ff69b4, #e91e63, etc.)
+        ctx.scale(this.size / 100, this.size / 100); // Escala para forma perfecta
 
-        // Forma de corazón
+        // Forma de corazón perfecta (clásica y bonita)
         ctx.beginPath();
-        ctx.moveTo(0, this.size / 4);
-        ctx.bezierCurveTo(-this.size / 2, -this.size / 2, -this.size, -this.size / 4, -this.size / 4, this.size / 2);
-        ctx.bezierCurveTo(-this.size / 8, this.size, 0, this.size / 1.5, 0, this.size / 1.5);
-        ctx.bezierCurveTo(0, this.size / 1.5, this.size / 8, this.size, this.size / 4, this.size / 2);
-        ctx.bezierCurveTo(this.size, -this.size / 4, this.size / 2, -this.size / 2, 0, this.size / 4);
+        ctx.moveTo(0, 25);
+        ctx.bezierCurveTo(-50, -25, -50, -75, 0, -100);
+        ctx.bezierCurveTo(50, -75, 50, -25, 0, 25);
+        ctx.bezierCurveTo(50, 60, 0, 100, 0, 100);
+        ctx.bezierCurveTo(0, 100, -50, 60, 0, 25);
         ctx.closePath();
         ctx.fill();
 
@@ -665,7 +668,8 @@ function animate() {
 
 animate();
 // ============ FIN DEL EFECTO ============
-</script>  
+</script>
 
 </body>
 </html>
+
