--- a/index.html
+++ b/index.html
@@ -205,14 +205,14 @@
         <button class="btn btn-outline-danger btn-sm" onclick="vaciarCarrito()">Vaciar Carrito</button>
         
         <div class="d-flex flex-wrap gap-2 justify-content-end">
-            <button class="btn btn-secondary" onclick="irASeccion('portada')">Seguir comprando</button>
+            <button class="btn btn-secondary" onclick="irASeccion('portada')">Volver al Catálogo</button>
             
             <button class="btn btn-dark shadow px-3" onclick="solicitarConfirmacion('imprimir_descargar')">
-                <i class="bi bi-printer-fill me-2"></i> Imprimir Cotización
+                <i class="bi bi-printer-fill me-2"></i> Cotizar Articulos del Carrito
             </button>
 
             <button class="btn btn-success shadow px-3" onclick="solicitarConfirmacion('whatsapp')">
-                <i class="bi bi-whatsapp me-2"></i> Enviar por WhatsApp
+                <i class="bi bi-whatsapp me-2"></i> Enviar Cotización por WhatsApp
             </button>
         </div>
       </div>
@@ -333,7 +333,6 @@
   </div>
 </div>
 
-<!-- Todos los modales exactamente como en tu código original -->
 
 <div class="modal fade" id="modalProductoDetalle" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -558,7 +557,7 @@
         <h5>Mariposas Cuties</h5>
         <p>Somos tu mejor opción en productos personalizados. Explora nuestro catálogo y genera cotizaciones al instante.</p>
         <div>
-          <a href="https://www.facebook.com/" class="text-white me-2"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100063945973270" class="text-white me-2"><i class="bi bi-facebook"></i></a>
           <a href="https://www.instagram.com/mariposas_cuties.rd/" class="text-white me-2"><i class="bi bi-instagram"></i></a>
           <a href="http://wa.me/18096659100" class="text-white"><i class="bi bi-whatsapp"></i></a>
         </div>
@@ -572,9 +571,9 @@
         </ul>
       </div>
       <div class="col-md-4">
-        <h5>Información de Contacto</h5>
+        <h5>Información de Contactos</h5>
         <p><i class="bi bi-geo-alt"></i> C/Salcedo-Tenares, Entrada los Platanitos</p>
-        <p><i class="bi bi-phone"></i> 809-665-9100</p>
+        <p><i class="bi bi-phone"></i> 809-665-9100 / 829-827-3753</p>
         <p><i class="bi bi-credit-card"></i> Aceptamos Efectivo y Transferencia</p>
       </div>
     </div>
@@ -586,11 +585,11 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="script.js"></script>
 
-<!-- Canvas para los corazones cayendo (Mes del Amor - Versión mejorada) -->
+<!-- Canvas para los corazones cayendo -->
 <canvas id="heartsCanvas" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 9999;"></canvas>
 
 <script>
-// ============ EFECTO DE CORAZONES CAYENDO (Mejorado: forma perfecta de corazón + colores rojos/rosas) ============
+// ============ EFECTO DE CORAZONES CAYENDO (Mes del Amor) ============
 const canvas = document.getElementById('heartsCanvas');
 const ctx = canvas.getContext('2d');
 
@@ -603,37 +602,34 @@ window.addEventListener('resize', () => {
 });
 
 const hearts = [];
-const heartCount = 35; // Un poquito más para que se vea lleno
-const colors = ['#ff0000', '#e74c3c', '#ff1493', '#e91e63', '#c2185b', '#ff69b4', '#ff4040']; // Rojos y rosas fuertes
+const heartCount = 15; // Puedes aumentar o bajar (30-50 queda bien)
 
 class Heart {
     constructor() {
         this.x = Math.random() * canvas.width;
         this.y = Math.random() * -100;
-        this.size = Math.random() * 20 + 15; // Más grandes
-        this.speedY = Math.random() * 1.2 + 0.6; // Caen lento
-        this.speedX = Math.random() * 1 - 0.5; // Flotan suavemente
+        this.size = Math.random() * 15 + 10;
+        this.speedY = Math.random() * 1.5 + 0.5; // Caen lento
+        this.speedX = Math.random() * 1 - 0.5; // Desvío horizontal suave
         this.rotation = Math.random() * Math.PI * 2;
-        this.rotationSpeed = Math.random() * 0.03 - 0.015; // Giro suave
-        this.opacity = Math.random() * 0.4 + 0.6; // Más visibles
-        this.color = colors[Math.floor(Math.random() * colors.length)];
+        this.rotationSpeed = Math.random() * 0.05 - 0.025;
+        this.opacity = Math.random() * 0.5 + 0.5;
     }
 
     draw() {
         ctx.save();
-        ctx.globalAlpha = this.opacity;
-        ctx.fillStyle = this.color;
         ctx.translate(this.x, this.y);
         ctx.rotate(this.rotation);
-        ctx.scale(this.size / 100, this.size / 100); // Escala para forma perfecta
+        ctx.globalAlpha = this.opacity;
+        ctx.fillStyle = '#ff1493'; // Rosa fuerte (puedes cambiar a #ff69b4, #e91e63, etc.)
 
-        // Forma de corazón perfecta (clásica y bonita)
+        // Forma de corazón
         ctx.beginPath();
-        ctx.moveTo(0, 25);
-        ctx.bezierCurveTo(-50, -25, -50, -75, 0, -100);
-        ctx.bezierCurveTo(50, -75, 50, -25, 0, 25);
-        ctx.bezierCurveTo(50, 60, 0, 100, 0, 100);
-        ctx.bezierCurveTo(0, 100, -50, 60, 0, 25);
+        ctx.moveTo(0, this.size / 4);
+        ctx.bezierCurveTo(-this.size / 2, -this.size / 2, -this.size, -this.size / 4, -this.size / 4, this.size / 2);
+        ctx.bezierCurveTo(-this.size / 8, this.size, 0, this.size / 1.5, 0, this.size / 1.5);
+        ctx.bezierCurveTo(0, this.size / 1.5, this.size / 8, this.size, this.size / 4, this.size / 2);
+        ctx.bezierCurveTo(this.size, -this.size / 4, this.size / 2, -this.size / 2, 0, this.size / 4);
         ctx.closePath();
         ctx.fill();
 
@@ -672,4 +668,3 @@ animate();
 
 </body>
 </html>
-
