--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  
+  <title>Mariposas Cuties | Tienda Online</title>
+  <link rel="icon" type="image/png" href="Logo.PNG">
+  <link rel="apple-touch-icon" href="Logo.PNG">
+
+  
   <!-- Supabase Client -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
@@ -668,3 +674,4 @@ animate();
 
 </body>
 </html>
+
