--- a/index.html
+++ b/index.html
@@ -278,6 +278,11 @@
         </div>
         
         <div class="tab-pane fade" id="adminProductos">
+          <div class="input-group mb-3 shadow-sm rounded-pill overflow-hidden border">
+              <span class="input-group-text bg-white border-0 ps-3"><i class="bi bi-search text-primary"></i></span>
+              <input type="text" id="adminSearchInput" class="form-control border-0" placeholder="Buscar producto para editar..." oninput="filtrarProductosAdmin()">
+          </div>
+
           <button class="btn btn-primary w-100 mb-3 rounded-pill" onclick="abrirModalProducto()">
             <i class="bi bi-plus-circle"></i> Nuevo Producto
           </button>
