--- a/index.html
+++ b/index.html
@@ -314,6 +314,39 @@
   </div>
 </div>
 
+  <div class="card p-4 mb-4 shadow-sm">
+    <h4 class="mb-3 text-primary"><i class="bi bi-images"></i> Contenido de la Web</h4>
+    
+    <div class="row g-3">
+        <div class="col-md-4">
+            <label class="form-label">Tipo de Imagen</label>
+            <select id="tipoContenido" class="form-select">
+                <option value="banner">Banner Principal (Carrusel)</option>
+                <option value="cliente">Galería Clientes Felices</option>
+            </select>
+        </div>
+        <div class="col-md-4">
+            <label class="form-label">Título (Solo para banners)</label>
+            <input type="text" id="tituloContenido" class="form-control" placeholder="Ej: Oferta San Valentín">
+        </div>
+        <div class="col-md-4">
+            <label class="form-label">Seleccionar Imagen</label>
+            <input type="file" id="fileContenido" class="form-control" accept="image/*">
+        </div>
+    </div>
+    <div class="mt-3 text-end">
+        <button class="btn btn-success" onclick="subirContenidoWeb()">
+            <i class="bi bi-cloud-upload"></i> Subir Imagen
+        </button>
+    </div>
+
+    <hr>
+    
+    <h6 class="text-muted">Imágenes Activas</h6>
+    <div id="listaContenidoAdmin" class="row g-2 mt-2">
+        </div>
+</div>
+
 <footer class="bg-primary-gradient text-white pt-5 pb-3 mt-auto shadow-top">
     <div class="container">
         <div class="row g-4">
@@ -376,3 +409,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
