actualizacion de datos y redes sociales

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   <div id="adminPanel" class="seccion">
     <div class="card p-3 p-md-4 border-0 shadow-sm rounded-4">
       <div class="d-flex justify-content-between align-items-center mb-4">
-        <h4 class="mb-0 text-primary fw-bold">Panel Admin</h4>
+        <h4 class="mb-0 text-primary fw-bold">Panel Administrativo</h4>
         <button class="btn btn-sm btn-outline-danger rounded-pill" onclick="cerrarSesion()">Salir</button>
       </div>
       
@@ -323,7 +323,7 @@
                      <h4 class="fw-bold m-0 text-white">Mariposas Cuties</h4>
                 </div>
                 <p class="text-white fw-bold">
-                    Somos una empresa encargada de vender productos totalmente personalizados, diseñados con amor para tus momentos especiales.
+                    Somos una empresa que se encargada de vender productos totalmente personalizados, diseñados con amor y dedicación para tus momentos especiales.
                 </p>
                 <div id="footerVisitasContainer" class="d-none d-inline-block bg-white bg-opacity-10 px-3 py-1 rounded-pill border border-white border-opacity-25 mt-2">
                     <small>
@@ -336,16 +336,16 @@
             <div class="col-md-3 text-center text-md-start">
                 <h5 class="fw-bold border-bottom border-light pb-2 d-inline-block text-white">Síguenos</h5>
                 <ul class="list-unstyled mt-2">
-                    <li class="mb-2"><a href="https://instagram.com" target="_blank" class="text-white text-decoration-none fw-bold"><i class="bi bi-instagram me-2 fs-5"></i> Instagram</a></li>
-                    <li><a href="https://facebook.com" target="_blank" class="text-white text-decoration-none fw-bold"><i class="bi bi-facebook me-2 fs-5"></i> Facebook</a></li>
+                    <li class="mb-2"><a href="https://www.instagram.com/mariposas_cuties.rd/" target="_blank" class="text-white text-decoration-none fw-bold"><i class="bi bi-instagram me-2 fs-5"></i> Instagram</a></li>
+                    <li><a href="https://www.facebook.com/profile.php?id=100063945973270" target="_blank" class="text-white text-decoration-none fw-bold"><i class="bi bi-facebook me-2 fs-5"></i> Facebook</a></li>
                 </ul>
             </div>
 
             <div class="col-md-4 text-center text-md-start">
                 <h5 class="fw-bold border-bottom border-light pb-2 d-inline-block text-white">Ubicación</h5>
-                <p class="text-white fw-bold mt-2 mb-2"><i class="bi bi-geo-alt-fill text-warning me-1"></i> Salcedo - Tenares, Rep. Dom.</p>
-                <a href="https://maps.google.com" target="_blank" class="btn btn-outline-light btn-sm rounded-pill w-100 mb-2 fw-bold"><i class="bi bi-map-fill me-2"></i> Ver en Mapa</a>
-                <p class="text-white fw-bold"><i class="bi bi-whatsapp text-success me-1"></i> 809-665-9100</p>
+                <p class="text-white fw-bold mt-2 mb-2"><i class="bi bi-geo-alt-fill text-warning me-1"></i> Carretera Salcedo - Tenares, Entrada los Platanitos, Rep. Dom.</p>
+                <a href="https://www.google.com/maps/place/19%C2%B022'15.2%22N+70%C2%B022'46.7%22W/@19.3708935,-70.3822059,17z/data=!3m1!4b1!4m4!3m3!8m2!3d19.3708935!4d-70.379631?hl=es&authuser=1&entry=ttu&g_ep=EgoyMDI2MDExMy4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="btn btn-outline-light btn-sm rounded-pill w-100 mb-2 fw-bold"><i class="bi bi-map-fill me-2"></i> Ver en Mapa</a>
+                <p class="text-white fw-bold"><i class="bi bi-whatsapp text-success me-1"></i> 809-665-9100 | 829-827-3753</p>
             </div>
         </div>
         <hr class="border-white opacity-25 my-4">
@@ -376,3 +376,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
